--- a/public/bootstrap-3.3.7/css/bootstrap.css
+++ b/public/bootstrap-3.3.7/css/bootstrap.css
@@ -2910,6 +2910,7 @@ select[multiple].input-lg {
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
+  font-size: 13px;
   color: #737373;
 }
 @media (min-width: 768px) {
